--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,132 @@
 :root {
-    --primary-color: #fce138;
-    --secondary-color: #024e76;
-    --tertiary-color: #39a6b2; 
+    --primary-color: black;
+    --secondary-color: white;
+    --tertiary-color: #1f2022; 
+    --font-family: "Gill Sans", sans-serif; 
   }
+/*apply styles to header*/
+
+header {
+  padding: 20px 35px;
+  background-color: var(--tertiary-color); 
+  justify-content: stretch;
+  
+
+}
+
+header h1 {
+  
+  font-weight: bold;
+  font-size: 36px;
+  color: white;
+  margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  
+}
+
+
+
+header a {
+  text-decoration: none;
+  color: white;
+}
+
+header nav {
+  
+  margin: 7px 0;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+header nav ul li a{
+  padding: 10px 15px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: white;
+  color: black;
+  border-radius: 15px;
+  text-shadow: none; 
+  letter-spacing: 1em; 
+}
+
+
+
+/* homepage hero */ 
+
+.hero {
+  
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-size: cover;
+  align-itens: flex-start;
+  background-attachment: fixed; 
+  background-position: 80%; 
+  background-color: var(--primary-color); 
+
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: left;
+  margin: 3.5%;
+  color: var(--primary-color);
+  font-size: 18px;
+  line-height: 1.2;
+
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: var(--secondary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+}
+
+img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px; 
+
+}
+
+
+.content {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+  background-color: var(--primary-color); 
+
+
+}
+
+
+
+
+
+.hello {
+  margin: 20px;
+  background: var(--secodary-color);
+  color: var(--primary-color);
+  flex: 1;
+}
+
+
+.hello p {
+  font-size: 55px;
+  color: white; 
+  
+}
