--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,8 @@ header nav ul li a:hover {
 img {
   display: block;
   margin: 10px auto;
-  max-width: 150px; 
+  max-width: 30%; 
+  border-radius: 40px; 
 
 }
 
@@ -130,4 +131,15 @@ img {
   font-size: 55px;
   color: white; 
   
+}
+
+
+footer {
+  background: var(--primary-color);
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
 }
