--- a/assets/css/secondstyle.css
+++ b/assets/css/secondstyle.css
@@ -21,7 +21,7 @@ header h1 {
   font-size: 36px;
   color: white;
   margin: 0;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  
   
 }
 
@@ -62,72 +62,75 @@ header nav ul li a:hover {
 
 
 
-/* homepage hero */ 
+
 
 .hero {
+    background-color: var(--primary-color);
+   
+}
+
+.sky img {
+    width: 100%; 
+    height: 400px; 
+}
+
+.content-projects {
+    background-color: var(--primary-color);
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+
+
+}
+
+.content-content {
+    margin: 20px;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    flex-wrap: flex;
+}
+
+.content-content img {
+    float: left; 
+    width: 25%; 
+    border-radius: 15px; 
   
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-size: cover;
-  align-items: flex-start;
-  background-attachment: fixed; 
-  background-position: 80%; 
-  background-color: var(--primary-color); 
-
 }
 
-.hero-cta {
-  width: 35%;
-  text-align: left;
-  margin: 3.5%;
-  color: var(--primary-color);
-  font-size: 18px;
-  line-height: 1.2;
-
-}
-
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: var(--secondary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
-}
-
-img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px; 
-
+.content-content img:hover {
+   position: relative; 
+   background-image: url(./images/run-buddy.png);
+ 
 }
 
 
-.content {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around; 
-  background-color: var(--primary-color); 
-
-
+.content-content p {
+    margin-right: 400px; 
+    float: right; 
 }
 
 
 
 
 
-.hello {
-  margin: 20px;
-  background: var(--secodary-color);
-  color: var(--primary-color);
-  flex: 1;
-}
 
 
-.hello p {
-  font-size: 55px;
-  color: white; 
-  
+
+
+
+
+
+
+
+
+footer {
+    background: var(--primary-color);
+    width: 100%;
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
 }
