--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,14 @@ header nav ul li a:hover {
   color: var(--secondary-color);
   display: flex; 
   flex-wrap: wrap; 
-  flex-direction: column; 
   
 }
 
 .about h1{
   font-weight: bold;
-  font-size: 36px; 
+  font-size: 55px; 
+  display: flex;
+  justify-content: center; 
 }
 
 .about p {
@@ -151,6 +152,22 @@ footer {
 
 }
 
+.project-head {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  display: flex; 
+  justify-content: center; 
+  
+}
+
+.project-head h1 {
+  font-weight: bold;
+  font-size: 55px; 
+  display: flex;
+  justify-content: center; 
+
+}
+
 .runbuddy-content {
   margin: 0; 
   background: var(--primary-color);
@@ -165,18 +182,21 @@ footer {
   font-weight: bold;
   font-size: 36px; 
   padding: 0 auto 40px auto; 
+  color: white; 
   
 }
 
 .runbuddy-content h4 {
   font-weight: lighter; 
-  
+  color: white; 
 
 }
 
 .runbuddy-content img { 
   width: 75%;  
   border-radius: 15px; 
+  display: flex; 
+  justify-content: center;
  
 
 }
@@ -193,6 +213,7 @@ footer {
   color: var(--secondary-color);
   display: flex; 
   flex-wrap: wrap;  
+  flex-direction: column;
   
 }
 
@@ -236,9 +257,9 @@ footer {
 
 .contact-content h1{
   font-weight: bold;
-  font-size: 36px;
-  color: white;
-  margin: 5% 0 0 0; 
+  font-size: 55px; 
+  display: flex;
+  justify-content: center; 
  
 }
 
