--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,36 +120,34 @@ header nav ul li a:hover {
 }
 
 .about h1{
+  background: var(--primary-color); 
   font-weight: bold;
   font-size: 55px; 
   display: flex;
   justify-content: center; 
+  position: -webkit-sticky;
+  position: sticky; 
+  top: -1px; 
 }
 
 .about p {
-  font-size: 16px; 
+  font-size: 18px; 
   font-weight: lighter; 
+  letter-spacing: 1px;
 }
 
+/*End of about*/ 
 
-footer {
-  background: var(--primary-color);
-  width: 100%;
-  padding: 40px 35px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+/* start of content */ 
 
-}
 
 .content-projects {
   background-color: var(--primary-color);
   width: 100%;
-  margin: 0 auto 75px auto;
+  margin: 0; 
   display: flex;
   flex-wrap: wrap;
-   
-
+  flex-direction: column;
 }
 
 .project-head {
@@ -157,46 +155,81 @@ footer {
   color: var(--secondary-color);
   display: flex; 
   justify-content: center; 
+  position:-webkit-sticky;
+  position:sticky; 
+  top: -1px; 
   
 }
 
 .project-head h1 {
   font-weight: bold;
   font-size: 55px; 
-  display: flex;
-  justify-content: center; 
+  position: relative; 
+  
 
 }
 
 .runbuddy-content {
+  position: static;
   margin: 0; 
   background: var(--primary-color);
   color: var(--secodary-color); 
-  display: flex; 
-  flex-wrap: wrap;
-  flex-direction: column; 
+  padding: 0 0 0 300px; 
+
 
 }
 
+.runbuddy-content a {
+align-items: center;
+width: 70em;
+height: 55em; 
+ 
+}
+
+
 .runbuddy-content h1{
+  
+  position: absolute;
   font-weight: bold;
   font-size: 36px; 
-  padding: 0 auto 40px auto; 
   color: white; 
+  height: 100%; 
+  width: 100%; 
+  padding: 0 0 0 25%; 
   
 }
 
+.runbuddy-content h1:before {
+  content:'';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; 
+}
+
 .runbuddy-content h4 {
+ 
+  position: absolute;
   font-weight: lighter; 
   color: white; 
+  height: 100%;
+  text-align: block;
+  width: 100%; 
+  padding: 50px 0 0 25%; 
+
+}
+
+.runbuddy-content h4:before {
+  content:''; 
+  display: inline-block; 
+  height: 100%;
+  vertical-align: middle;
 
 }
 
 .runbuddy-content img { 
-  width: 75%;  
+  width: 100%;  
   border-radius: 15px; 
-  display: flex; 
-  justify-content: center;
+
  
 
 }
@@ -208,33 +241,67 @@ footer {
 }
 
 .content-content {
-  margin: 0;
+  margin: 0; 
   background: var(--primary-color);
   color: var(--secondary-color);
-  display: flex; 
-  flex-wrap: wrap;  
-  flex-direction: column;
+
+ 
   
+}
+
+.content-content a {
+  
+  align-items: center;
+  position: relative;
+  height: 20ex;
+  width: 35%;  
 }
 
 .content-content h1{
+ 
+  z-index: 1; 
+  position: absolute;
   font-weight: bold;
   font-size: 36px; 
-  padding: 0 auto 40px auto; 
+  color: white; 
+  height: 400px; 
+  text-align: center;
+  width: 15%; 
+}
+.content-content h1:before {
+  content:'';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; 
 }
 
 .content-content h4 {
+  
+  z-index: 1; 
+  position: absolute;
   font-weight: lighter; 
+  color: white; 
+  height: 500px; 
+  text-align: center;
+  width: 15%; 
   
 
+}
+
+.content-content h4:before {
+  content:'';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; 
 }
 
 
 .content-content img {
- 
-  width: 25%;  
-  border-radius: 15px; 
- 
+
+  width: 100%; 
+  height: 400px;  
+  border-radius: 30px; 
+  margin-top: 10px; 
 
 }
 
@@ -243,23 +310,97 @@ footer {
 
 
 }
- 
+
+/* IN CASE I NEED FOR PASTEL PUZZLES */ 
+.content-secondcontent {
+  margin: 0;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  display: flex; 
+  justify-content: space-around; 
+  
+  
+}
+
+.content-secondcontent a {
+  align-items: center;
+  position: relative;
+  height: 20ex;
+  width: 35%; 
+}
+
+.content-secondcontent h1{
+  z-index: 1; 
+  position: absolute;
+  font-weight: bold;
+  font-size: 36px; 
+  color: white; 
+  height: 400px; 
+  text-align: center;
+  width: 15%; 
+}
+.content-secondcontent h1:before {
+  content:'';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; 
+}
+
+.content-secondcontent h4 {
+  z-index: 1; 
+  position: absolute;
+  font-weight: lighter; 
+  color: white; 
+  height: 500px; 
+  text-align: center;
+  width: 15%; 
+  
+
+}
+
+.content-secondcontent h4:before {
+  content:'';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; 
+}
+
+
+.content-secondcontent img {
+  width: 100%; 
+  height: 400px;  
+  border-radius: 30px; 
+  margin-top: 10px; 
+
+}
+
+.content-secondcontent img:hover {
+ position: relative; 
+
+
+}
+
+/*END OF PASTEL PUZZLES*/ 
+
+/*end of content*/
+
+
+
+/* beginning of CONTACT*/
 
 .contact-content {
   background: var(--primary-color);
   color: var(--secondary-color);
-  display: flex; 
-  flex-wrap: wrap; 
-  padding: 35px;
-  justify-content: stretch;
+  padding: 15px 0 15px 0;
+
+ 
   
 }
 
 .contact-content h1{
   font-weight: bold;
   font-size: 55px; 
-  display: flex;
-  justify-content: center; 
+ 
  
 }
 
@@ -296,7 +437,20 @@ footer {
   background: white;
   color: black;
   border-radius: 15px;
-  text-shadow: none; 
   letter-spacing: 1em; 
  
+}
+
+
+
+
+
+footer {
+  background: var(--primary-color);
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
 }
