--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,8 @@ header nav ul li a:hover {
   margin: 10px auto;
   max-width: 30%; 
   border-radius: 40px; 
+  display: flex; 
+  flex-wrap: wrap; 
 
 }
 
@@ -101,6 +103,8 @@ header nav ul li a:hover {
   margin: 20px;
   background: var(--secodary-color);
   color: var(--primary-color);
+  display: flex;
+  flex-wrap: wrap; 
   flex: 1;
 }
 
@@ -124,6 +128,7 @@ header nav ul li a:hover {
   font-weight: bold;
   font-size: 55px; 
   display: flex;
+  flew-wrap: wrap; 
   justify-content: center; 
   position: -webkit-sticky;
   position: sticky; 
@@ -154,6 +159,7 @@ header nav ul li a:hover {
   background: var(--primary-color);
   color: var(--secondary-color);
   display: flex; 
+  flex-wrap: wrap; 
   justify-content: center; 
   position:-webkit-sticky;
   position:sticky; 
@@ -170,35 +176,40 @@ header nav ul li a:hover {
 }
 
 .runbuddy-content {
-  position: static;
+  position: center;
   margin: 0; 
   background: var(--primary-color);
   color: var(--secodary-color); 
-  padding: 0 0 0 300px; 
+  display: flex;
+  flex-wrap: wrap; 
+ 
 
 
 }
 
 .runbuddy-content a {
 align-items: center;
-width: 70em;
-height: 55em; 
+width: 100%;
+height: 30em; 
  
 }
 
 
 .runbuddy-content h1{
-  
+  z-index: 1; 
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
-  font-weight: bold;
+  color: var(--secondary-color); 
   font-size: 36px; 
-  color: white; 
-  height: 100%; 
-  width: 100%; 
-  padding: 0 0 0 25%; 
+  font-weight: bold; 
+  height: 200px; 
+  text-align: center;
+  width: 15%; 
+  padding: 75px 0 0 40px; 
+ 
+} 
   
-}
-
 .runbuddy-content h1:before {
   content:'';
   display: inline-block;
@@ -207,14 +218,16 @@ height: 55em;
 }
 
 .runbuddy-content h4 {
- 
+  border: 5px solid var(--tertiary-color); 
+  background: var(--tertiary-color); 
+  border-radius: 15px; 
   position: absolute;
   font-weight: lighter; 
   color: white; 
-  height: 100%;
-  text-align: block;
-  width: 100%; 
-  padding: 50px 0 0 25%; 
+  height: 300px; 
+  text-align: center;
+  width: 15%; 
+  padding: 10px 0 0 0; 
 
 }
 
@@ -227,10 +240,11 @@ height: 55em;
 }
 
 .runbuddy-content img { 
-  width: 100%;  
-  border-radius: 15px; 
-
- 
+  border: 5px solid var(--tertiary-color); 
+  width: 100%; 
+  height: 400px;  
+  border-radius: 30px; 
+  margin-top: 10px; 
 
 }
 
@@ -244,29 +258,27 @@ height: 55em;
   margin: 0; 
   background: var(--primary-color);
   color: var(--secondary-color);
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: space-evenly;
 
  
   
 }
 
 .content-content a {
-  
   align-items: center;
   position: relative;
-  height: 20ex;
-  width: 35%;  
+  height: 35ex;
+  width: 35ex;   
 }
 
-.content-content h1{
- 
+.content-content h1 {
   z-index: 1; 
-  position: absolute;
   font-weight: bold;
   font-size: 36px; 
   color: white; 
-  height: 400px; 
-  text-align: center;
-  width: 15%; 
+ 
 }
 .content-content h1:before {
   content:'';
@@ -275,17 +287,15 @@ height: 55em;
   vertical-align: middle; 
 }
 
-.content-content h4 {
-  
-  z-index: 1; 
-  position: absolute;
-  font-weight: lighter; 
-  color: white; 
-  height: 500px; 
-  text-align: center;
-  width: 15%; 
-  
 
+
+.content-content h4 {
+  z-index: 1; 
+  border: 5px solid var(--tertiary-color); 
+  border-radius: 15px;  
+  font-weight: lighter; 
+  color: white;  
+ 
 }
 
 .content-content h4:before {
@@ -297,17 +307,18 @@ height: 55em;
 
 
 .content-content img {
-
+  border: 5px solid var(--tertiary-color); 
   width: 100%; 
   height: 400px;  
   border-radius: 30px; 
   margin-top: 10px; 
-
+  margin-bottom: 30px; 
+  display: flex;
+  justify-content: space-evenly; 
 }
 
 .content-content img:hover {
- position: relative; 
-
+ position: relative;
 
 }
 
@@ -325,8 +336,8 @@ height: 55em;
 .content-secondcontent a {
   align-items: center;
   position: relative;
-  height: 20ex;
-  width: 35%; 
+  height: 35ex;
+  width: 35ex; 
 }
 
 .content-secondcontent h1{
@@ -351,7 +362,7 @@ height: 55em;
   position: absolute;
   font-weight: lighter; 
   color: white; 
-  height: 500px; 
+  height: 100px; 
   text-align: center;
   width: 15%; 
   
@@ -367,10 +378,12 @@ height: 55em;
 
 
 .content-secondcontent img {
+  border: 5px solid var(--tertiary-color); 
   width: 100%; 
   height: 400px;  
   border-radius: 30px; 
   margin-top: 10px; 
+  margin-bottom: 30px; 
 
 }
 
@@ -391,7 +404,7 @@ height: 55em;
 .contact-content {
   background: var(--primary-color);
   color: var(--secondary-color);
-  padding: 15px 0 15px 0;
+  padding: 100px 0 15px 50px;
 
  
   
