--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ header nav ul li a:hover {
   font-weight: bold;
   font-size: 55px; 
   display: flex;
-  flew-wrap: wrap; 
+  flex-wrap: wrap; 
   justify-content: center; 
   position: -webkit-sticky;
   position: sticky; 
@@ -150,7 +150,6 @@ header nav ul li a:hover {
   margin: 0; 
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
 }
 
 .project-head {
@@ -257,161 +256,48 @@ height: 30em;
 
 }
 
-.content-content {
-  margin: 0; 
-  background: var(--primary-color);
-  color: var(--secondary-color);
-  display: flex; 
-  flex-wrap: wrap; 
-  justify-content: start;
-
- 
-  
-}
-
-.content-content a {
-  align-items: center;
-  position: relative;
-  height: 35ex;
-  width: 35ex;   
-}
-
-/*  
-.headings h1 {
-  z-index: 1; 
+.container {
+  width: 100%; 
   display: flex;
   flex-wrap: wrap;
-  justify-content: normal;
-  color: var(--secondary-color); 
-  font-size: 36px; 
-  font-weight: bold; 
-  height: 100px; 
-  width: 15%; 
-  margin-top: 150px;
- 
-}
-.headings h1:before {
-  content:'';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle; 
+  align-items: center;
 }
 
+.smallbox {
+ margin: 30px 30px 30px 70px; 
+ padding: 5%;
+ flex-basis: 30%;
+ border: 3px solid var(--tertiary-color); 
+ align-items: center;
+}
 
-
-.content-content h4 {
-  border: 5px solid var(--tertiary-color); 
-  background: var(--tertiary-color); 
-  border-radius: 15px; 
+.smallbox h1 {
+  color: var(--secodary-color);
   display: flex; 
-  flex-wrap: wrap; 
-  align-items: flex-end; 
-  position: absolute;
-  font-weight: lighter; 
-  color: white; 
-  height: 100px; 
-  text-align: bottom;
-  width: 15%; 
-  margin-top: 175px;
+  justify-content: center; 
+  padding: 10px;
+ align-items: center;
+ font-size: 36px; 
+ font-weight: bold; 
+
 }
 
-.content-content h4:before {
-  content:'';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle; 
-}
-*/ 
-
-
-.content-content img {
+.smallbox img {
   border: 5px solid var(--tertiary-color); 
-  width: 100%; 
-  height: 400px;  
-  border-radius: 30px; 
-  margin-top: 10px; 
-  margin-bottom: 30px; 
   display: flex;
-  justify-content: space-evenly; 
+  justify-content: center;
+ align-items: center;
+
 }
 
-.content-content img:hover {
+.smallbox img:hover {
  position: relative;
 
 }
 
-/* IN CASE I NEED FOR PASTEL PUZZLES */ 
-.content-secondcontent {
-  margin: 0;
-  background: var(--primary-color);
-  color: var(--secondary-color);
-  display: flex; 
-  justify-content: space-around; 
-  
-  
-}
-
-.content-secondcontent a {
-  align-items: center;
-  position: relative;
-  height: 35ex;
-  width: 35ex; 
-}
-
-.content-secondcontent h1{
-  z-index: 1; 
-  position: absolute;
-  font-weight: bold;
-  font-size: 36px; 
-  color: white; 
-  height: 400px; 
-  text-align: center;
-  width: 15%; 
-}
-.content-secondcontent h1:before {
-  content:'';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle; 
-}
-
-.content-secondcontent h4 {
-  z-index: 1; 
-  position: absolute;
-  font-weight: lighter; 
-  color: white; 
-  height: 100px; 
-  text-align: center;
-  width: 15%; 
-  
-
-}
-
-.content-secondcontent h4:before {
-  content:'';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle; 
-}
 
 
-.content-secondcontent img {
-  border: 5px solid var(--tertiary-color); 
-  width: 100%; 
-  height: 400px;  
-  border-radius: 30px; 
-  margin-top: 10px; 
-  margin-bottom: 30px; 
 
-}
-
-.content-secondcontent img:hover {
- position: relative; 
-
-
-}
-
-/*END OF PASTEL PUZZLES*/ 
 
 /*end of content*/
 
@@ -485,3 +371,88 @@ footer {
   flex-wrap: wrap;
 
 }
+
+
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative; 
+      }
+    
+      header h1 {
+        width: 100%;
+        text-align: center;
+      }
+    
+      header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+      }
+    
+      header nav ul li a {
+        font-size: 20px;
+      }
+    
+      .intro-img {
+        width: 80%;
+      }
+      
+      .intro {
+        flex: 0 70%;
+      }
+      
+    
+
+      @media screen and (max-width: 768px) {
+
+        .section {
+          padding: 30px 15px;
+        }
+      
+      
+        .intro-img {
+          flex: 0 32%;
+          margin-right: 0;
+          margin-top: 15px;
+          margin-bottom: 15px;
+        }
+      
+        .about-text {
+          flex: 100%;  
+        }
+      
+      }
+      
+
+
+      
+      @media screen and (max-width: 575px) {
+
+  
+      
+        .intro {
+          width: 95%;
+        }
+      
+        .intro p {
+          width: 100%;
+        }
+      
+        .content-projects {
+          flex: 0 100%;
+        }
+      
+        .contact-info {
+          text-align: center;
+        }
+      
+        .contact-info > * {
+          flex: 0 100%;
+        }
+        
+     
+    }
